syntax = "proto3";

package hive.registry.v1;

import "google/protobuf/empty.proto";

message Service {
  string name = 1;
  string host = 2;
  int32 port = 3;
  string version = 4;
  string instanceId = 5;
  int64 timestamp = 6;
  int32 ttl = 7;
  map<string, string> metadata = 8; 
}

message ListServicesResponse {
  repeated Service services = 1;
}

message ListServicesRequest {
  string name = 1;
  string instanceId = 2;
}

message GetServiceByNameAndVersionRequest {
  string name = 1;
  string version = 2;
}

message GetServiceByIdRequest {
  string instanceId = 1;
}

message StorageStatus {
  string type = 1;
  bool healthy = 2;
}

message ServiceHealth {
  string status = 1;
  int64 timestamp = 2;
  int64 uptime = 3;
  StorageStatus storage = 4;
}

service Registry {
  rpc ListServices(ListServicesRequest) returns (ListServicesResponse);
  rpc ListServicesByNameAndVersion(GetServiceByNameAndVersionRequest) returns (ListServicesResponse);
  rpc GetServiceByNameAndVersion(GetServiceByNameAndVersionRequest) returns (Service);
  rpc RegisterService(Service) returns (Service);
  rpc UnregisterService(GetServiceByIdRequest) returns (Service);
  rpc SendHeartbeat(GetServiceByIdRequest) returns (Service);
  rpc CheckHealth(google.protobuf.Empty) returns (ServiceHealth);
}
